# cm

CM/: CMakeLists.txt  License.txt  Makefile  README.md  Third Party Open Source Notice.docx  build.sh  build_make.sh
CM/src/: CMakeLists.txt  Makefile
CM/src/cm_adapter/: CMakeLists.txt  Makefile
CM/src/cm_adapter/cm_dcc_adapter/: CMakeLists.txt  Makefile  cm_ddb_dcc.cpp
CM/src/cm_adapter/cm_ddb_adapter/: CMakeLists.txt  Makefile  cm_ddb_adapter.cpp
CM/src/cm_adapter/cm_etcd_adapter/: CMakeLists.txt  Makefile  cm_ddb_etcd.cpp  cm_ddb_etcd_arbitrate.cpp  cm_ddb_etcd_stub.cpp
CM/src/cm_adapter/cm_etcdapi/: CMakeLists.txt  Makefile  cm_etcdapi.cpp
CM/src/cm_adapter/cm_sharedisk_adapter/: CMakeLists.txt  Makefile  cm_ddb_sharedisk.cpp  cm_ddb_sharedisk_cmd.cpp  cm_ddb_sharedisk_disklock.cpp
CM/src/cm_adapter/cm_sharediskapi/: CMakeLists.txt  Makefile  cm_disk_rw.cpp  cm_voting_disk.cpp  cm_vtable.cpp  share_disk_api.cpp
CM/src/cm_agent/: CMakeLists.txt  Makefile  cm_agent.centralized.conf.sample  cm_agent.centralized_new.conf.sample  cm_agent.conf.sample  cma_alarm.cpp  cma_common.cpp  cma_connect.cpp  cma_connect_client.cpp  cma_create_conn_cms.cpp  cma_disk_check.cpp  cma_global_params.cpp  cma_instance_management.cpp  cma_instance_management_res.cpp  cma_log_management.cpp  cma_main.cpp  cma_mes.cpp  cma_msg_queue.cpp  cma_network_check.cpp  cma_phony_dead_check.cpp  cma_process_messages.cpp  cma_process_messages_client.cpp  cma_status_check.cpp  cma_status_check_res.cpp  cma_threads.cpp  cma_voting_disk.cpp
CM/src/cm_agent/client_adpts/libpq/: cma_datanode.cpp  cma_datanode_check.cpp  cma_datanode_utils.cpp  cma_libpq_api.cpp  cma_libpq_com.cpp
CM/src/cm_client/: CMakeLists.txt  Makefile  cm_client.cpp  cm_client_api.cpp
CM/src/cm_common/: CMakeLists.txt  Makefile  be_module.cpp  cm_elog.cpp  cm_ip.cpp  cm_json_config.cpp  cm_json_parse_floatIp.cpp  cm_misc.cpp  cm_misc_base.cpp  cm_misc_res.cpp  cm_msg_buf_pool.cpp  cm_msg_version_convert.cpp  cm_rhb.cpp  cm_stringinfo.cpp  cm_text.cpp  cm_util.cpp
CM/src/cm_communication/: CMakeLists.txt  Makefile
CM/src/cm_communication/cm_feconnect/: CMakeLists.txt  Makefile  fe-connect.cpp  fe-misc.cpp  fe-protocol.cpp  pqexpbuffer.cpp
CM/src/cm_communication/cm_libpq/: CMakeLists.txt  Makefile  ip.cpp  pqcomm.cpp  pqsignal.cpp
CM/src/cm_communication/cm_protocol/: CMakeLists.txt  Makefile  cm_cipher.cpp  cm_error.cpp  cm_spinlock.cpp  cs_ssl.cpp
CM/src/cm_ctl/: CMakeLists.txt  Makefile  cm_ctl.cpp  ctl_common.cpp  ctl_common_res.cpp  ctl_finishredo.cpp  ctl_global_params.cpp  ctl_guc.cpp  ctl_help.cpp  ctl_misc.cpp  ctl_param_check.cpp  ctl_pause.cpp  ctl_process_message.cpp  ctl_query.cpp  ctl_query_base.cpp  ctl_rack.cpp  ctl_res.cpp  ctl_res_check.cpp  ctl_res_list.cpp  ctl_restart.cpp  ctl_resume.cpp  ctl_show.cpp  ctl_start.cpp  ctl_stop.cpp  ctl_switch.cpp  ctl_switchover.cpp
CM/src/cm_monitor/: CMakeLists.txt  Makefile  monitor_main.cpp
CM/src/cm_server/: CMakeLists.txt  Makefile  cm_server.centralized.conf.sample  cm_server.centralized_new.conf.sample  cm_server.conf.sample  cms_alarm.cpp  cms_arbitrate_cluster.cpp  cms_arbitrate_cms.cpp  cms_arbitrate_datanode_pms.cpp  cms_arbitrate_datanode_pms_utils.cpp  cms_arbitrate_datanode_psd.cpp  cms_arbitrate_datanode_single.cpp  cms_arbitrate_synclist.cpp  cms_az.cpp  cms_az_check_network.cpp  cms_barrier_check.cpp  cms_cluster_switchover.cpp  cms_common.cpp  cms_common_res.cpp  cms_conn.cpp  cms_cus_res.cpp  cms_ddb.cpp  cms_ddb_adapter.cpp  cms_disk_check.cpp  cms_global_params.cpp  cms_global_params_utils.cpp  cms_main.cpp  cms_monitor_main.cpp  cms_msg_que.cpp  cms_phony_dead_check.cpp  cms_process_messages.cpp  cms_process_messages_agent.cpp  cms_process_messages_append.cpp  cms_process_messages_clt.cpp  cms_process_messages_ctl.cpp  cms_process_messages_ctl_inter.cpp  cms_process_messages_hadr.cpp  cms_process_messages_res.cpp  cms_rhb.cpp  cms_sync_dynamic_info.cpp  (+2 more)
CM/src/include/: rack.h
CM/src/include/cm/: cm_cgroup.h  cm_cipher.h  cm_debug.h  cm_defs.h  cm_elog.h  cm_error.h  cm_ip.h  cm_json_config.h  cm_json_parse_floatIp.h  cm_misc.h  cm_misc_base.h  cm_misc_res.h  cm_msg.h  cm_msg_buf_pool.h  cm_msg_common.h  cm_msg_ipv4.h  cm_msg_version_convert.h  cm_rhb.h  cm_spinlock.h  cm_ssl_base.h  cm_text.h  cm_util.h  cs_ssl.h
CM/src/include/cm/cm_adapter/: cm_ddb_adapter.h  cm_ddb_dcc.h  cm_ddb_etcd.h  cm_ddb_sharedisk.h  cm_etcdapi.h  cm_vtable.h
CM/src/include/cm/cm_agent/: cma_alarm.h  cma_client.h  cma_common.h  cma_connect.h  cma_connect_client.h  cma_create_conn_cms.h  cma_datanode_scaling.h  cma_disk_check.h  cma_global_params.h  cma_instance_check.h  cma_instance_management.h  cma_instance_management_res.h  cma_log_management.h  cma_main.h  cma_mes.h  cma_msg_queue.h  cma_network_check.h  cma_phony_dead_check.h  cma_process_messages.h  cma_process_messages_client.h  cma_process_messages_hadr.h  cma_status_check.h  cma_threads.h
CM/src/include/cm/cm_client/: cm_client.h  cm_client_api.h
CM/src/include/cm/cm_ctl/: ctl_common.h  ctl_common_res.h  ctl_global_params.h  ctl_help.h  ctl_misc.h  ctl_process_message.h  ctl_query_base.h  ctl_rack.h  ctl_res.h  ctl_res_list.h  ctl_show.h
CM/src/include/cm/cm_server/: cm_server.h  cms_alarm.h  cms_arbitrate_cluster.h  cms_arbitrate_cms.h  cms_arbitrate_datanode.h  cms_arbitrate_datanode_pms.h  cms_arbitrate_datanode_pms_utils.h  cms_az.h  cms_barrier_check.h  cms_cluster_switchover.h  cms_common.h  cms_common_res.h  cms_conn.h  cms_cus_res.h  cms_ddb.h  cms_ddb_adapter.h  cms_main.h  (+10 more)
CM/src/include/opengauss/: c.h  gs_thread.h  gs_threadlocal.h  pg_config.h  pgtime.h  port.h  postgres_fe.h  securec_check.h
CM/src/lib/: CMakeLists.txt  Makefile
CM/src/lib/alarm/: CMakeLists.txt  Makefile  alarm.cpp  alarmConfig.conf  alarmItem.conf  alarm_log.cpp  alarm_stub.cpp
CM/src/lib/config/: CMakeLists.txt  Makefile  cm_config.cpp
CM/src/lib/hotpatch/: CMakeLists.txt  Makefile
CM/tool/cm_tool/: CMLog.py  Common.py  CreateCMCACert.sh  ErrorCode.py  InstallImpl.py  cm_install  cm_uninstall
(+43 files in other folders)
