add_subdirectory(lib)
add_subdirectory(cm_adapter)
message("CM_ADPT_LIBS: ${CM_ADPT_LIBS}")
message("HOTPATCH_LIBS: ${HOTPATCH_LIBS}")
add_subdirectory(cm_agent)
add_subdirectory(cm_client)
add_subdirectory(cm_common)
add_subdirectory(cm_communication)
add_subdirectory(cm_ctl)
add_subdirectory(cm_monitor)
add_subdirectory(cm_server)